SET(APPLICATION_NAME vsgmaths)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include/
    ${OSG_INCLUDE_DIR}
)

SET(SOURCES
    vsgmaths.cpp
)

ADD_EXECUTABLE(${APPLICATION_NAME} ${HEADERS} ${SOURCES})

LINK_DIRECTORIES(${OSG_LIB_DIR})

if (TARGET_OSG OR TARGET_VSG)
    add_dependencies(${APPLICATION_NAME} ${TARGET_OSG} ${TARGET_VSG})
endif()

TARGET_LINK_LIBRARIES(${APPLICATION_NAME} vsg::vsg ${OSG_LIBRARIES})
